--- a/Client code/MobileSocial/res/values/styles.xml
+++ b/Client code/MobileSocial/res/values/styles.xml
@@ -476,9 +476,19 @@
     
     
     
+    <style name="lj_setting_theme" parent="android:style/Theme.Holo.Light">  
+        <item name="android:actionBarTabStyle">@style/lj_setting_actionbar_tab_style</item>  
+        <item name="android:actionBarTabTextStyle">@style/lj_setting_actionbar_tab_text_style</item>  
+    </style>  
     
-    
-    
+    <style name="lj_setting_actionbar_tab_style" parent="android:style/Widget.Holo.Light.ActionBar.TabView">  
+        <item name="android:background">@drawable/lj_action_bar_background</item>  
+        </style> 
+        
+    <style name="lj_setting_actionbar_tab_text_style" parent="android:style/Widget.Holo.Light.ActionBar.TabText">          
+        <item name="android:textSize">13sp</item>     
+        <item name="android:textColor">@drawable/lj_action_bar_text_color</item>
+    </style>  
     
     
     
