Add edit text hint at chuck_pop.xml layout

--- a/Client code/MobileSocial/res/layout/chuck_pop.xml
+++ b/Client code/MobileSocial/res/layout/chuck_pop.xml
@@ -68,6 +68,7 @@
         <com.lj.driftbottle.ui.LineEditText
             android:id="@+id/lj_driftbottle_edit"
             style="?android:attr/textViewStyle"
+            android:hint="写下你的秘密......"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
