--- a/Client code/MobileSocial/res/values/dimens.xml
+++ b/Client code/MobileSocial/res/values/dimens.xml
@@ -28,4 +28,16 @@
     <dimen name="lj_game_setting_eightpuzzle_left_marign">30dp</dimen>
     <dimen name="lj_userinfo_eightpuzzle_image_height">100dp</dimen>
 
+    <!-- Floating button -->
+    <dimen name="fab_size_normal">56dp</dimen>
+    <dimen name="fab_size_mini">40dp</dimen>
+    <dimen name="fab_icon_size">24dp</dimen>
+    <dimen name="fab_plus_icon_size">14dp</dimen>
+    <dimen name="fab_plus_icon_stroke">2dp</dimen>
+    <dimen name="fab_shadow_offset">3dp</dimen>
+    <dimen name="fab_shadow_radius">9dp</dimen>
+    <dimen name="fab_stroke_width">1dp</dimen>
+    <dimen name="fab_actions_spacing">16dp</dimen>
+    <dimen name="fab_labels_margin">8dp</dimen>
+
 </resources>
