--- a/Client code/MobileSocial/res/layout/activity_main.xml
+++ b/Client code/MobileSocial/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:my="http://schemas.android.com/apk/res/com.example.testmobiledatabase"  
+    xmlns:my="http://schemas.android.com/apk/res/com.example.testmobiledatabase"
     android:id="@android:id/tabhost"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
@@ -82,25 +82,37 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
-            android:layout_margin="8dp" 
-            my:expandDuration="500"
-            my:satelliteDistance="130dp"
-            my:mainImage="@drawable/sat_main_style2"
+            android:layout_margin="8dp"
             my:closeOnClick="true"
+            my:expandDuration="500"
+            my:mainImage="@drawable/sat_main_style2"
+            my:satelliteDistance="130dp"
             my:totalSpacingDegree="180" />
-        
+
         <com.lj.satellitemenu.SatelliteMenu
             android:id="@+id/lj_menu_advanced"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
-            android:layout_margin="8dp" 
-            my:expandDuration="500"
-            my:satelliteDistance="130dp"
-            my:mainImage="@drawable/sat_main_style2"
+            android:layout_margin="8dp"
+            android:visibility="gone"
             my:closeOnClick="true"
-            my:totalSpacingDegree="180"
-            android:visibility="gone" />
+            my:expandDuration="500"
+            my:mainImage="@drawable/sat_main_style2"
+            my:satelliteDistance="130dp"
+            my:totalSpacingDegree="180" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
+
+        <ImageView
+            android:id="@+id/lj_menu_fake_position"
+            android:layout_width="120dp"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom|center"
+            android:background="@android:color/transparent"/>
     </FrameLayout>
 
 </TabHost>
