--- a/Client code/MobileSocial/res/layout/yg_dialog_activity.xml
+++ b/Client code/MobileSocial/res/layout/yg_dialog_activity.xml
@@ -13,7 +13,8 @@
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginTop="80dp"
-        android:gravity="center" >
+        android:gravity="center"
+        android:visibility="gone" >
 
         <Button
             android:layout_width="match_parent"
@@ -22,8 +23,8 @@
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:layout_marginTop="80dp"
-            android:visibility="gone"
-            android:background="@android:color/transparent" />
+            android:background="@android:color/transparent"
+            android:visibility="gone" />
     </LinearLayout>
 
     <LinearLayout
