--- a/Client code/MobileSocial/res/layout/lj_fragment_game_setting.xml
+++ b/Client code/MobileSocial/res/layout/lj_fragment_game_setting.xml
@@ -20,11 +20,11 @@
                 android:layout_height="2dp"
                 android:src="@drawable/lj_setting_line" />
 
-            <RelativeLayout
+            <RelativeLayout 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white" >
-
+ 
                 <TextView
                     android:layout_width="@dimen/lj_userinfo_item_width"
                     android:layout_height="@dimen/lj_userinfo_item_height"
@@ -34,7 +34,7 @@
                     android:text="声音"
                     android:textSize="@dimen/lj_userinfo_text_size" />
 
-                <Switch
+                <com.lj.ui.switchbutton.SwitchButton
                     android:id="@+id/lj_game_setting_sound_switch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -62,7 +62,7 @@
                     android:text="震动"
                     android:textSize="@dimen/lj_userinfo_text_size" />
 
-                <Switch
+                <com.lj.ui.switchbutton.SwitchButton
                     android:id="@+id/lj_game_setting_shake_switch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -94,7 +94,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/white" >
 
-                <Switch
+                <com.lj.ui.switchbutton.SwitchButton
                     android:id="@+id/lj_game_setting_eightpuzzle_switch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -134,7 +134,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/white" >
 
-                <Switch
+                <com.lj.ui.switchbutton.SwitchButton
                     android:id="@+id/lj_game_setting_song_switch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -163,7 +163,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/white" >
 
-                <Switch
+                <com.lj.ui.switchbutton.SwitchButton
                     android:id="@+id/lj_game_setting_bazinga_switch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
