--- a/Client code/MobileSocial/res/layout/yg_video_chat_dial_fragmet.xml
+++ b/Client code/MobileSocial/res/layout/yg_video_chat_dial_fragmet.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="返回"
-                android:textColor="@android:color/white"
+                android:textColor="@color/yg_activity_video_chat_back_color_selector"
                 android:textSize="17sp" />
         </LinearLayout>
 
@@ -60,7 +60,8 @@
             android:layout_centerHorizontal="true"
             android:layout_centerInParent="true"
             android:layout_marginTop="20dp"
-            android:text="正在匹配中"
+            android:text="正在匹配中..."
+            android:textSize="18sp"
             android:textColor="@android:color/white" />
     </RelativeLayout>
 
@@ -70,7 +71,7 @@
         android:layout_height="50dp"
         android:layout_above="@+id/yg_activity_video_chat_inner_hint"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/yg_video_chat_incoming_deny_normal" />
+        android:src="@drawable/yg_video_chat_incoming_accept_normal" />
 
     <TextView
         android:id="@+id/yg_activity_video_chat_inner_hint"
@@ -80,7 +81,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="30dp"
         android:layout_marginTop="10dp"
-        android:text="取消匹配"
+        android:text="开始匹配"
         android:textColor="@android:color/white" />
 
 </RelativeLayout>
