--- a/Client code/MobileSocial/res/layout/tp_publicactivity_actionbar.xml
+++ b/Client code/MobileSocial/res/layout/tp_publicactivity_actionbar.xml
@@ -59,7 +59,7 @@
             android:layout_marginRight="10dp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="发送"
+            android:text="分享"
             android:textColor="#FFFFFF"
             android:textSize="17sp" />
     </LinearLayout>
