--- a/Client code/MobileSocial/res/layout/tp_feed_comments_item.xml
+++ b/Client code/MobileSocial/res/layout/tp_feed_comments_item.xml
@@ -5,8 +5,8 @@
     android:layout_height="wrap_content" >
 
     <RelativeLayout
-        android:id="@+id/publicactivityadpter_comment_content"
-        android:layout_width="fill_parent"
+        android:id="@+id/publicactivityadpter_comment_photo"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingBottom="6.0dip"
         android:paddingLeft="6.0dip"
@@ -19,42 +19,39 @@
             android:layout_height="38.0dip"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginRight="6.0dip"/>
+            android:layout_marginRight="6.0dip" />
+    </RelativeLayout>
 
-        <!-- <ImageView
-            android:id="@+id/publicactivityadpter_comment_portrait"
-            android:layout_width="0.0dip"
-            android:layout_height="0.0dip"
-            android:layout_alignBottom="@id/publicactivityadpter_comment_profile_photo"
-            android:layout_alignLeft="@id/publicactivityadpter_comment_profile_photo"
-            android:layout_alignRight="@id/publicactivityadpter_comment_profile_photo"
-            android:layout_alignTop="@id/publicactivityadpter_comment_profile_photo"
-            android:background="@drawable/tp_comment_avatar"/> -->
+    <RelativeLayout
+        android:id="@+id/publicactivityadpter_comment_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/publicactivityadpter_comment_photo"
+        android:paddingBottom="6.0dip"
+        android:paddingTop="6.0dip" >
 
         <TextView
             android:id="@+id/publicactivityadpter_comment_body"
             style="@style/feed_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@id/publicactivityadpter_comment_profile_photo"
-             />
+            android:layout_alignParentTop="true" />
 
         <TextView
             android:id="@+id/publicactivityadpter_comment_sub"
             style="@style/feed_subtext_on_white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/publicactivityadpter_comment_body"
-            android:layout_toRightOf="@id/publicactivityadpter_comment_profile_photo"
-             />
+            android:layout_below="@id/publicactivityadpter_comment_body"/>
     </RelativeLayout>
 
     <include
-        android:id="@+id/comment_divider"
+        android:id="@+id/tp_feed_comments_comment_divider"
         android:layout_width="fill_parent"
         android:layout_height="1.0dip"
         android:layout_below="@id/publicactivityadpter_comment_content"
-        layout="@layout/tp_bubble_item_divider"  android:visibility="gone"/>
+        layout="@layout/tp_bubble_item_divider"
+        android:visibility="visible" />
 
 </RelativeLayout>
