Python Web: remove unuseless file

--- a/MaintainServer/Display/templates/home.html
+++ b/MaintainServer/Display/templates/home.html
@@ -11,9 +11,15 @@
 <body>
 <div style="text-align:center;clear:both;">
 </div>
-<div class="container">
+
+<div class="logo">
+	<div style="float:left">
+		<img src = "static/eg_tulip.jpg">
+	</div>
+
+	<div class="container" style = "floag:left">
 	<ul class="menu">
-		<li><a href="line">主页</a></li>
+		<li><a href="/">主页</a></li>
 		<li><a href="#">菜单一</a>
 			<ul class="submenu">
 				<li><a href="#">子菜单A</a></li>
@@ -54,6 +60,8 @@
 		<li><a href="#">返回教程</a></li>
 	</ul>
 </div>
+</div>
+
 
 
 </body>
