Python Web: dynamic web page

--- a/MaintainServer/Display/templates/home.html
+++ b/MaintainServer/Display/templates/home.html
@@ -518,72 +518,18 @@
                         </div>
                         <div class="span3 smallstat box mobileHalf noMargin" ontablet="span6" ondesktop="span3">
                             <i class="icon-download-alt green"></i>
-                            <span class="title">Income</span>
-                            <span class="value">$1 999,99</span>
+                            <span class="title">下载量</span>
+                            <span class="value">3214</span>
                         </div>
 
                         <div class="span3 smallstat mobileHalf box" ontablet="span6" ondesktop="span3">
-                            <i class="icon-money yellow"></i>
-                            <span class="title">Account</span>
-                            <span class="value">$19 999,99</span>
+                            <i class="icon-user yellow"></i>
+                            <span class="title">当前在线人数</span>
+                            <span class="value">34</span>
                         </div>
 
                     </div>
-
-                    <div class='row-fluid'>
-                        <div class='span12 box box-transparent'>
-                            <div class='row-fluid'>
-                                <div class='span2 box-quick-link blue-background'>
-                                    <a href='/orders.html'>
-                                        <div class='header'>
-                                            <div class='icon-comments'></div>
-                                        </div>
-                                        <div class='content'>Comments</div>
-                                    </a>
-                                </div>
-                                <div class='span2 box-quick-link green-background'>
-                                    <a href='#'>
-                                        <div class='header'>
-                                            <div class='icon-star'></div>
-                                        </div>
-                                        <div class='content'>Veeeery long title of this quick link</div>
-                                    </a>
-                                </div>
-                                <div class='span2 box-quick-link orange-background'>
-                                    <a href='#'>
-                                        <div class='header'>
-                                            <div class='icon-magic'></div>
-                                        </div>
-                                        <div class='content'>Magic</div>
-                                    </a>
-                                </div>
-                                <div class='span2 box-quick-link purple-background'>
-                                    <a href='#'>
-                                        <div class='header'>
-                                            <div class='icon-eye-open'></div>
-                                        </div>
-                                        <div class='content'>Show</div>
-                                    </a>
-                                </div>
-                                <div class='span2 box-quick-link red-background'>
-                                    <a href='#'>
-                                        <div class='header'>
-                                            <div class='icon-inbox'></div>
-                                        </div>
-                                        <div class='content'>Orders</div>
-                                    </a>
-                                </div>
-                                <div class='span2 box-quick-link muted-background'>
-                                    <a href='#'>
-                                        <div class='header'>
-                                            <div class='icon-refresh'></div>
-                                        </div>
-                                        <div class='content'>Spinning</div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <hr class='hr-drouble'/>
                     <div class='row-fluid'>
                         <div class='span6 box'>
                             <div class='box-header'>
@@ -620,7 +566,7 @@
                             </div>
                         </div>
                     </div>
-                    <hr class='hr-drouble'/>
+
                     <div class='group-header'>
                         <div class='row-fluid'>
                             <div class='span6 offset3'>
