Disable input keyboard when jump into dialog activity during the tour guide.

--- a/Client code/MobileSocial/res/layout/yg_dialog_activity.xml
+++ b/Client code/MobileSocial/res/layout/yg_dialog_activity.xml
@@ -67,7 +67,8 @@
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
+                    android:layout_height="wrap_content"
+                    android:focusableInTouchMode="true" >
 
                     <Button
                         android:id="@+id/yg_dialog_activity_add_utton"
